--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://timpeng.me
+url: http://vanesio.github.io
 title: 过客匆匆
 subtitle: ...
 author: timpeng
